Regression: Data transfer modifier no longer respects vertex group for transfers of vertex color #104475

Closed
opened 2023-02-08 17:16:50 +01:00 by Nathan Vasil · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: rB55485cb379f7
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-02-01 22:06, hash: rBd82ffb9787c3
Worked: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: rBcc66d1020c3b

Caused by eae36be372

Short description of error
When used to transfer color, either as vertex data or as face corner data, the data transfer modifier doesn't use any vertex groups specified for the modifier-- it transfers color to all vertices, regardless of their assignment to any vertex group.

Exact steps for others to reproduce the error

image

This screenshot should demonstrate the issue. I have two planes, both with vertex color layers with the same name but with different colors assigned to the layers. We give a data transfer modifier to one plane to copy color from the other. We limit that data transfer modifier by a vertex group and assign some vertices to that group.

Here, I'm using a displace modifier on the left to demonstrate which vertices are assigned to "Group", and I have the data transfer modifiers disabled so that you can see the vertex color layers. On the right, we have the same planes, but the data transfer modifiers have been enabled; we see that the data transfer has affected all vertices, not just those assigned to Group. I'm using two different data transfer layers, and two different vertex color layers, to test that the issue exists in both types of vertex color layers.

This problem exists for both face-corner and vertex data type vertex color layers, and exists regardless of mapping used for the data transfer; the last time it worked, we didn't have the option for vertex data type vertex colors. It is not just a display issue or an issue with the live modifier; applying the modifier and inspecting the vertex color afterwards shows that it wrote the color to all vertices. Data transfer of vertex groups seems to be working appropriately still (can still limit that transfer with a vertex group) so this seems to be limited to treatment of vertex color.

File used to create the above is attached.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `rB55485cb379f7` Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-02-01 22:06, hash: `rBd82ffb9787c3` Worked: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `rBcc66d1020c3b` Caused by eae36be372a6b16ee3e76eff0485a47da4f3c230 **Short description of error** When used to transfer color, either as vertex data or as face corner data, the data transfer modifier doesn't use any vertex groups specified for the modifier-- it transfers color to all vertices, regardless of their assignment to any vertex group. **Exact steps for others to reproduce the error** ![image](/attachments/96a9f650-3f6e-4a40-ab07-513729f68099) This screenshot should demonstrate the issue. I have two planes, both with vertex color layers with the same name but with different colors assigned to the layers. We give a data transfer modifier to one plane to copy color from the other. We limit that data transfer modifier by a vertex group and assign some vertices to that group. Here, I'm using a displace modifier on the left to demonstrate which vertices are assigned to "Group", and I have the data transfer modifiers disabled so that you can see the vertex color layers. On the right, we have the same planes, but the data transfer modifiers have been enabled; we see that the data transfer has affected all vertices, not just those assigned to Group. I'm using two different data transfer layers, and two different vertex color layers, to test that the issue exists in both types of vertex color layers. This problem exists for both face-corner and vertex data type vertex color layers, and exists regardless of mapping used for the data transfer; the last time it worked, we didn't have the option for vertex data type vertex colors. It is not just a display issue or an issue with the live modifier; applying the modifier and inspecting the vertex color afterwards shows that it wrote the color to all vertices. Data transfer of vertex groups seems to be working appropriately still (can still limit that transfer with a vertex group) so this seems to be limited to treatment of vertex color. File used to create the above is attached.
Nathan Vasil added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-02-08 17:16:51 +01:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-02-09 09:41:50 +01:00
Member

Caused by eae36be372

CC @JosephEagar

Caused by eae36be372a6b16ee3e76eff0485a47da4f3c230 CC @JosephEagar
Philipp Oeser added the
Module
Sculpt, Paint & Texture
label 2023-02-09 10:43:10 +01:00
Philipp Oeser changed title from Data transfer modifier no longer respects vertex group for transfers of vertex color to Regression: Data transfer modifier no longer respects vertex group for transfers of vertex color 2023-02-09 10:44:24 +01:00
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-02-09 10:44:41 +01:00
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-02-11 17:26:05 +01:00
Brecht Van Lommel added this to the 3.5 milestone 2023-02-15 10:26:17 +01:00
Joseph Eagar was assigned by Brecht Van Lommel 2023-02-15 10:53:18 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-23 08:31:58 +01:00
Member

The fix also needs to go into 3.5-release.
Reopening.

The fix also needs to go into 3.5-release. Reopening.
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2023-02-24 07:25:49 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-24 13:27:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104475
No description provided.