Sculpt: Fix #104475, data transfer not respecting vgroup for float colors

This might've been a merge error, the result of color mixing
was being overwritten by a simple copy of source to destination
inside of layerCopyValue_propcol.